tests/errors/type_misspelled_property.js
let user = { name: "Alice", age: 25 };
let nme = user.nme;
